--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "ak-kemp",
   "license": "MIT",
   "dependencies": {
+    "csv": "^6.3.5",
     "dotenv": "^16.1.4",
     "fs": "^0.0.1-security",
-    "puppeteer": "^20.5.0",
-    "maplibre-gl": "^3.0.1"
+    "maplibre-gl": "^3.0.1",
+    "puppeteer": "^20.5.0"
   }
 }
