--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "csv": "^6.3.5",
     "dotenv": "^16.1.4",
     "fs": "^0.0.1-security",
+    "lighthouse": "^11.2.0",
     "maplibre-gl": "^3.0.1",
     "puppeteer": "^20.5.0"
   }
